[gd_scene load_steps=4 format=3 uid="uid://fu46d3him35o"]

[ext_resource type="PackedScene" uid="uid://cffktb7uj82qv" path="res://scene/components/hit_box_component/hit_box_component.tscn" id="1_00tc4"]
[ext_resource type="Script" uid="uid://da0h753mk80to" path="res://scene/game_objects/enemies/melee_enemy/melee_src/melee_enemy_2_attack_scene.gd" id="1_h7hiw"]

[sub_resource type="Gradient" id="Gradient_m0y62"]
offsets = PackedFloat32Array(0, 0.24475524, 0.5979021, 0.8496503, 0.9685315)
colors = PackedColorArray(1, 0.1882353, 0, 1, 1, 0.2784314, 0.11372549, 1, 1, 0.42745098, 0.32941177, 1, 1, 0.7372549, 0.52156866, 1, 1, 0.63529414, 0.45882353, 1)

[node name="MeleeEnemy2AttackScene" type="Node2D"]
script = ExtResource("1_h7hiw")

[node name="FireParticles" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 1
one_shot = true
emission_shape = 2
emission_sphere_radius = 3.46
spread = 42.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
radial_accel_min = 49.7
radial_accel_max = 49.7
scale_amount_min = 0.0
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_m0y62")

[node name="HitBoxComponent" parent="FireParticles" instance=ExtResource("1_00tc4")]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 256

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FireParticles/HitBoxComponent"]
unique_name_in_owner = true

[connection signal="area_entered" from="FireParticles/HitBoxComponent" to="." method="_on_hit_box_component_area_entered"]
